# maya-cpp-plugin-template

./: .gitignore  README.md  cookiecutter.json
.claude/: settings.local.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES.md  VERSION  make.bat
{{cookiecutter.project_slug}}/.github/workflows/: ci-integration-tests.yml  ci-unit-tests.yml  release.yml
{{cookiecutter.project_slug}}/_blueprint/plugin_template/: CMakeLists.txt
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/package/: dev_drop_setup.py  developer_notes.txt  dragAndDropMe.py  index.html  inject_utils.py  package.py  {{ cookiecutter.project_slug }}.mod
{{cookiecutter.project_slug}}/src/plugins/: README.md
{{cookiecutter.project_slug}}/src/plugins/topoSymDeformer/: CMakeLists.txt  plugin.cpp  topoSymDeformer.cpp  topoSymDeformer.h  topoSymGPUDeformer.cpp  topoSymGPUDeformer.h
{{cookiecutter.project_slug}}/src/tools/: README.md
{{cookiecutter.project_slug}}/tests/: conftest.py  developer_notes.txt
{{cookiecutter.project_slug}}/tests/integration/: invoke.py
{{cookiecutter.project_slug}}/tests/unit/: invoke.py
